# rustapi

./: Cargo.toml  README.md  Rocket.toml
blogposts/2023/Jan/1/: index.html.hbs
src/: main.rs  templates.rs
templates/: test1.html.hbs
